Some OpenAPI fixes
