# doc/oas-client.json
@@ -1124,11 +1124,11 @@
         "security" : [ ]
       }
     },
-    "/api/v2/preview/{mediaItemId}/{time}" : {
+    "/api/v2/preview/{mediaItemId}/{timestamp}" : {
       "get" : {
         "tags" : [ "Media" ],
         "summary" : "Returns a preview image from a media item.",
-        "operationId" : "getApiV2PreviewByMediaItemIdByTime",
+        "operationId" : "getApiV2PreviewByMediaItemIdByTimestamp",
         "parameters" : [ {
           "name" : "mediaItemId",
           "in" : "path",
@@ -2042,9 +2042,12 @@
             "items" : {
               "$ref" : "#/components/schemas/ApiHint"
             }
+          },
+          "comment" : {
+            "type" : "string"
           }
         },
-        "required" : [ "name", "taskGroup", "taskType", "duration", "collectionId", "targets", "hints" ]
+        "required" : [ "name", "taskGroup", "taskType", "duration", "collectionId", "targets", "hints", "comment" ]
       },
       "ApiTaskType" : {
         "type" : "object",
